tests/agl/rejections/scope/let_name_claimed_by_record.agl
let Widget = 1

record Widget
  x: int

print Widget
